--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -20,6 +20,10 @@
         @apply text-white bg-red-primary hover:bg-red-secondry
     }
 
+    .orange-effect{
+        @apply text-white bg-orange-primary hover:bg-orange-secondry
+    }
+
     
     .cardImage {
         @apply h-full w-full
@@ -27,6 +31,10 @@
 
     .addCartButton {
         @apply bg-blue-primary hover:bg-blue-secondry py-2 px-5 text-white font-semibold rounded-md
+    }
+
+    .userFormInput {
+        @apply border w-full border-gray-400 p-1  focus:outline-none focus:ring-1 focus:ring-inputFormFocusRing
     }
    
 
