--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -24,24 +24,14 @@
         @apply text-white bg-orange-primary hover:bg-orange-secondry
     }
 
-    
     .cardImage {
         @apply h-full w-full
-    }
-
-    .addCartButton {
-        @apply bg-blue-primary hover:bg-blue-secondry py-2 px-5 text-white font-semibold rounded-md
     }
 
     .userFormInput {
         @apply border w-full border-gray-400 p-1  focus:outline-none focus:ring-1 focus:ring-inputFormFocusRing
     }
    
-
-    .add-cart-button {
-        @apply bg-red-primary w-5/6 h-9 rounded-md hover:bg-red-secondry text-white font-semibold
-    }
-
     .card-hover-style {
         @apply hover:text-blue-600 cursor-pointer hover:border-blue-primary
     }
@@ -76,6 +66,15 @@
         @apply text-center text-2xl font-semibold my-2
     }
 
+    /* cart page items or cart releted items */
+
+    
+    .addCartButton {
+        @apply bg-blue-primary hover:bg-blue-secondry py-2 px-5 text-white font-semibold rounded-md
+    }
+    .gotoCartButton{
+        @apply bg-orange-primary hover:bg-orange-secondry py-2 px-5 text-white font-semibold rounded-md
+    }
    
 
 }
